--- a/index.html
+++ b/index.html
@@ -1,87 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--DISCLAIMIR: This web document was created for a Coursera assignment, and entirely out of silliness. There is NO intent from the developers to politicize, marginalize, induce physical or mental harm on anyone/anything with the publicized content. This was merely developed to exercise/practice basic understandings and knowledge of html for web development. Anybody taking this content seriously is highly discouraged from doing so. --> 
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Coursera project</title>
-  <link rel="icon" type="image/png" href="vector.png">
+  <title>Springtime In Michigan</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body style=background-color:lightgray>
-<main>
-<header>
-<h1>Top 5 Craziest Animal Moments Caught On Camera!</h1>
-<p>As shocking as this might seem, animals are not always cute, innocent creatures that want to coinhabit the<br>
-earth with humans. Soon, you will come to find that some of these animals seek to cause only chaos and <br>
-destruction, threatening all civilization as we know it.</p>
-<p><strong>The follwing information may be too scary to accept, therefore reader/viewer discretion is advised.</strong></p>
-</header>
-<p>Here is a list of all the crazy animals caught on camera:</p>
-<ol><li>Aggressive penguin becomes a surface-to-air missle</li><li>Crow has a cigarette in its mouth</li><li>Fish drinking someone's drink</li><li>Dog gets pulled over by a cop</li><li>Cat sits in a tank</li>
-</ol>
-<br>
-<br>
-<div class="tenor-gif-embed" data-postid="25721603" data-share-method="host" data-aspect-ratio="1" data-width="20%">
-<a href="https://tenor.com/view/penguin-kaboom-rocket-penguin-gif-25721603">Penguin Kaboom GIF</a>from
-<a href="https://tenor.com/search/penguin-gifs" target=_blank>Penguin GIFs</a>
-</div>
-<script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-<script src="script.js"></script>
-<p><i>Description:&nbsp;</i>Absolutely horrifying! An aggressive penguin intimidates a poor bystander,
-<br>and when they slip and fall through the ice, the penguin immediately activates its hidden
-<br>solid-state rocket boosters, shoots upwards, and proceeds to dive strait towards its
-<br>helpless prey.</p>
-<br>
-<img src="crow_smoking.jpeg" alt="Crow with a cigarette in its beak" style="width:285px">
-<p><i>Description:&nbsp;</i>We tend to think that animals want to preserve our earth's health just as much
-<br>as humans do. However, some do not. Look at this example of the crow; it is clearly
-<br>demonstrating how much it hates the environment by smoking a cigarette. Clearly, it's goal
-<br>is to raise the carbon footprint of the earth, which will heat up our atmosphere, causing our
-<br>polar ice caps to melt, causing our oceans to rise.. All in an effort to put our coastlines 
-<br>underwater!</p>
-<div class="tenor-gif-embed" data-postid="22168967" data-share-method="host" data-aspect-ratio=".9" data-width="20%">
-<a href="https://tenor.com/view/fish-fosh-drinks-bonk-tf2-gif-22168967">Fish Fosh GIF</a>from <a href="https://tenor.com/search/fish-gifs">Fish GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-<p><i>Description:&nbsp;</i>Have you ever wondered why the global supply of fresh water is dwindling? Here
-<br>is one (of many) culprits responsible! This fish boarded a civilian's boat, demanded to be fed
-<br>the person's water, threatened to capsize the boat (which I cannot empirically confirm because I
-<br>cannot speak fish, but I imagine that's what it said), and then proceeded to drink the water,
-<br>before quickly retreating into the waters. This is just one example of how our freshwater
-<br>supply is being taken away.
-</p>
-<br>
-<img src="dog_driving.avif" alt="Dog gets pulled over by a cop" style="width:285px">
-<p><i>Description:&nbsp;</i>This image captures the brave moment a police officer pulls over a
-<br>reckless dog driving a hypercar. Moments before this picture was taken, the officer and
-<br>canine were engaged in a life or death, high speed chase down the interstate. The officer
-<br>was thankfully able to get the dog to stop, by promising a bag of doggy treats. Unaware of
-<br>the trickery, the dog slowed down and pulled over. And that is when this image was taken.
-<br>Why was the dog driving recklessly? How did it get a hypercar? The answer? We may
-<br>never know. But, we must never think for a moment that the dog isn't part of <i>the</i>
-<br>global effort to supercede the human race.
-</p>
-<br>
-<img src="cat_in_tank.jpg" alt="Cat in a tank" style="width:285px">
-<p><i>Description:&nbsp;</i>As we have seen in these examples, more and more animals are beginning
-<br>to reject the social hiearchy that places humans on top. In this last example, I hope to truly
-<br>highlight the danger we humans are in. In this image, a bystander happened to witness a cat
-<br>hijacking a tank. What the cat planned on doing with the tank is still unknown. According
-<br>to eyewitness testimony, the cat had managed to start the tank, but seeing a bystander
-<br>taking pictures, quickly abandoned the vehicle. Its motives, while unclear, should
-<br>not be underestimated. With such firepower, the cat could have caused serious damage!
-</p>
-</main>
-<footer>
-<h2 style="font-size:15px">Disclaimer: None of the fair use material has been altered in any way.
-<br> All copyright holders of the gifs/images used in this document are as follows:</h2>
-<ul>
-<li>Penguin missle gif: Creator CreativeBacon on <a href="https://tenor.com/view/penguin-kaboom-rocket-penguin-gif-25721603" target="_blank">Tenor.com</a></li>
-<li>Crow with a cigarette img: Creator unknown on <a href="https://shallot.neocities.org/world" target="_blank">shallot.neocities.org</a></li>
-<li>Fish drinking gif: Creator Antigen_ on <a href="https://tenor.com/view/fish-fosh-drinks-bonk-tf2-gif-22168967" target="_blank">Tenor.com</a></li>
-<li>Dog pulled over by a cop img: Creator corgibobaa, editor Diksha Rani on <a href="https://www.ndtv.com/offbeat/watch-pet-corgi-dog-runs-away-from-cops-driving-toy-car-leaves-netizens-in-splits-3427775" target="_blank">NDTV.com</a></li>
-<li>Cat is sitting in a tank img: Creator Eraser411 on <a href="https://www.reddit.com/r/aww/comments/5p00dp/my_friend_got_his_cat_a_tank/" target="_blank">Reddit.com</a></li>
-</ul>
-</footer>
-<br>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="neighborhood.html">Neighborhood Walks</a></li>
+        <li><a href="parks.html">Walks in the Park</a></li>
+      </ul>
+    </nav>
+    <img src="BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
+    <h1>Springtime in Michigan</h1>
+  </header>
+  <main>
+    <p>Springtime in <a href="https://www.michigan.org/city/ann-arbor">Ann Arbor</a> is a beautiful time. Even though
+      it can be chilly at times, it is nice to walk my dog Bacon. This site includes some pictures I have taken on
+      these walks. </p>
+
+    <p>Sometimes we walk around the neighborhood, other times we make it to the woods. Ann Arbor also has some
+      beautiful lakes and rivers including the <a
+        href="https://www.annarbor.org/things-to-do/recreation-outdoors/huron-river/">Huron River Watertrail</a> and
+      the <a href="https://www.a2gov.org/departments/Parks-Recreation/parks-places/argo/pages/default.aspx">Argo Park
+        Cascades</a>.</p>
+
+  </main>
+  <footer>
+    <p>This page was originally created by Colleen van Lent for the <a
+        href="https://www.coursera.org/specializations/web-design"> Web Design for Everybody</a> Specialization.
+      Specialization. Students are invited to make changes.</p>
+  </footer>
+
 </body>
+
 </html>
