--- a/parks.html
+++ b/parks.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Neighborhood Walk</title>
-  <link rel="stylesheet" href="style.css">"
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <a href="#stmc" style="font-size:14px">Skip to Main Content</a>
   <header>
     <nav>
       <ul>
@@ -16,13 +17,12 @@
         <li><a href="neighborhood.html">Neighborhood Walks</a></li>
         <li><a href="parks.html">Walks in the Park</a></li>
       </ul>
-    </nav>
-    <img src="BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
+    <img src="BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue."></nav>
     <h1>Michigan Parks</h1>
 
   </header>
-  <main>
-    <div>
+  <main id="stmc">
+    <div class="flexclass">
       <img src="bacon_in_the_woods.png" alt="brown labradoodle sitting near a stream in a wooded setting"
         width="100">
       <img src="bacon_near_the_fort.png"
