--- a/neighborhood.html
+++ b/neighborhood.html
@@ -9,19 +9,20 @@
 </head>
 
 <body>
+  <a href="#stmc" style="font-size:14px">Skip to Main Content</a>
   <header>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="neighborhood.html">Neighborhood Walks</a></li>
-        <li><a href="parks.html">Walks in the Park</a></li>
+        <li><a href="parks.html">Walks in The Park</a></li>
       </ul>
-    </nav>
     <img src="BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
+    </nav>
     <h1>Neighborhood Walks</h1>
   </header>
-  <main>
-    <div>
+  <main id="stmc">
+    <div class="gridclass">
       <img src="bend_in_the_road.png"
         alt="a purple tree stands in contrast to the green leaved trees along a bend in the road" width="100">
       <img src="pink_blossoms.png" alt="small pink blossoms on an otherwise green leaved tree" width="100">
@@ -29,11 +30,10 @@
         width="100">
       <img src="falling_petals.png" alt="a purple tulip tree that is beginning to shed its petals" width="100">
       <img src="hanging_plants.png" alt="red and green plants in a decorative hanging basket" width="100">
-      <img src="potted_plants.png" alt="a decorative planter with a variety of brightly colored plants "
-        width="100">
+      <img src="potted_plants.png" alt="a decorative planter with a variety of brightly colored plants " width="100">
       <img src="red_maple.png" alt="a small Japanese maple tree in front of a putple door" width="100">
-      <img src="tree_with_white_blooms.png"
-        alt="brown labradoodle sitting in front of tree blooming with white petals" width="100">
+      <img src="tree_with_white_blooms.png" alt="brown labradoodle sitting in front of tree blooming with white petals"
+        width="100">
       <img src="tulips.png" alt="bright red tulips in front of a garden light" width="100">
       <img src="white_buds_on_tree.png" alt="artsy shot of white blooms on a green tree with a dark background"
         width="100">
